Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14701

Can't select Kit's environment changes for Qt Quick UI project

XMLWordPrintable

      1. Open a Qt Quick UI project.
      2. Go to Projects mode, "Run" tab.
      3. Expand "Run Environment".
        The combo box for selecting environments is disabled and "System Environment" is selected. It is not possible to select something else.

      It should be possible to select an environment which contains the environment settings defined in the active kit. This should also be the default setting.

      My use case is that I have built Qt with a compiler which is not in my usual system environment. To run applications from this Qt build, they need to find the build tool's libraries. I defined their location in the kit settings but this setting is ignored for Qt Quick UI projects. Thus, qmlscene can't be run without further changes to the environment in the run configuration.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes