Qt Quick UI: Add "kit environment" as a base environment for run

Change-Id: Ica4e63b4b8e56ee6d2ead0ad3a5d1b57de20009c
Task-number: QTCREATORBUG-14701
Reviewed-by: Kai Koehne <kai.koehne@theqtcompany.com>